K1J-407: Some formatting fixes